--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "engines": {
-    "node": ">=14"
+    "node": ">=18"
   },
   "files": [
     "src",
@@ -21,8 +21,8 @@
     "test": "mocha -n loader=ts-node/esm test/setup.ts test/specs/*.ts",
     "test:esm": "node test/esm/prepare.mjs && node test/esm/test.cjs && node test/esm/test.mjs",
     "toc": "markdown-toc README.md -i --maxdepth 4",
-    "build:esm": "rm -rf dist/esm && tsc -p tsconfig.build.json",
-    "build:cjs": "rm -rf dist/cjs && tsc -p tsconfig.build.cjs.json && echo '{\"type\":\"commonjs\"}' > dist/cjs/package.json",
+    "build:esm": "tsc -p tsconfig.build.json",
+    "build:cjs": "tsc -p tsconfig.build.cjs.json && echo '{\"type\":\"commonjs\"}' > dist/cjs/package.json",
     "build": "npm run build:esm && npm run build:cjs",
     "release": "npm run lint && npm t && npm run build && npm run test:esm && np --yolo --no-release-draft"
   },
@@ -31,8 +31,7 @@
   },
   "dependencies": {
     "@types/http-errors": "^1.8.2",
-    "http-errors": "^2.0.0",
-    "node-fetch": "^2.6.7"
+    "http-errors": "^2.0.0"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.0",
