--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:esm": "node test/esm/prepare.mjs && node test/esm/test.cjs && node test/esm/test.mjs",
     "toc": "markdown-toc README.md -i --maxdepth 4",
     "build:esm": "tsc -p tsconfig.build.json",
-    "build:cjs": "tsc -p tsconfig.build.cjs.json && echo '{\"type\":\"commonjs\"}' > dist/cjs/package.json",
+    "build:cjs": "tsc -p tsconfig.build.cjs.json && echo {\"type\":\"commonjs\"} > dist/cjs/package.json",
     "build": "npm run build:esm && npm run build:cjs",
     "release": "npm run lint && npm t && npm run build && npm run test:esm && np --yolo --no-release-draft",
     "postinstall": "npm run build"
